--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body{
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .Header{
-  background-color: rgb(58, 156, 188);
+  background-color: rgb(236, 174, 255);
   font-size: 50px;
   margin-left: 400px;
   border-radius: 10px;
@@ -20,6 +20,10 @@ th{
   border-radius: 5px;
   margin-left: 5px;
   color: white;
+}
+
+.finished{
+  color: grey;
 }
 
 .inp-fields{
@@ -50,4 +54,46 @@ input{
 
 table{
   margin-left: 250px;
+}
+
+.past-due {
+  color: red;
+}
+
+.not-past-due {
+  color: green;
+}
+
+#btn-sort{
+  color:aliceblue;
+  background-color: black;
+  border-radius: 10px;
+  margin-top: 2px;
+  margin-left: 10px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 20px auto;
+
+}
+
+th,
+td {
+  text-align: left;
+  padding: 8px;
+  border: 1px solid #000000;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.btns{
+  margin-left:40px;
+}
+
+tr{
+  margin-right: 10px;
 }
